--- a/blog-ui/src/style.css
+++ b/blog-ui/src/style.css
@@ -137,6 +137,11 @@ a:hover {
     display: flex;
     flex-direction: column;
     gap: 14px;
+
+    input,
+    textarea {
+        padding: 5px 5px;
+    }
 }
 
 .row {
